--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -1,1 +1,33 @@
-build/dappnode_package-holesky.json
+{
+  "name": "ethchain-geth.public.dappnode.eth",
+  "version": "10.0.66",
+  "upstream": "v1.14.8",
+  "autoupdate": true,
+  "title": "Ethereum node (Geth + mainnet)",
+  "description": "Ethereum Client - based on Geth",
+  "avatar": "/ipfs/QmVQUEapZGZ7tWfDWP4XUQBxCe2rLbdPJLXu3QaLiPp542",
+  "type": "library",
+  "chain": "ethereum",
+  "image": {
+    "restart": "always",
+    "ports": [
+      "30303:30303",
+      "30303:30303/udp"
+    ],
+    "volumes": [
+      "ethchain-geth:/root/.ethereum/ethchain-geth"
+    ],
+    "environment": [
+      "NETWORK=mainnet",
+      "EXTRA_OPTS=--http.api eth,net,web3,txpool"
+    ]
+  },
+  "author": "AVADO",
+  "license": "(C)",
+  "links": {
+    "RPC endpoint": "http://ethchain-geth.my.ava.do:8545",
+    "RPC endpoint (SSL)": "https://ethchain-geth.my.ava.do",
+    "WS endpoint": "ws://ethchain-geth.my.ava.do:8546",
+    "EE endpoint (http)": "http://ethchain-geth.my.ava.do:8551"
+  }
+}
